Revision history for Getopt-Euclid

0.4.5  2014-03-21
  - Fixed bug when parsing arguments with missing variable (reported by Torbjørn
    Lindahl)

0.4.4  2013-08-21
  - Fixed bug with Bleadperl v5.19.2-257-gc30fc27 (bug #87804, reported by
    Andreas Koenig, patch by Dave Mitchell)
  - New process_pod() method to specify arbitrary list of POD files to parse
    (bug #87592, requested by zdm)
  - More optional default checks

0.4.3  2013-07-22
  - Added a check for .default and .opt_default references in argument description
  - Speed optimizations

0.4.2  2013-07-17
  - Ignore POD from .pod files generated by earlier versions of Getopt::Euclid

0.4.1  2013-07-17
  - Support for default values defined based on variables

0.4.0  2013-02-08
  - Fixed issue with option values that are substrings of others (bug #76728, 
    reported by Igor Kleshchevich, patch by James F Hester)
  - Update of META.yml (bug #83221)

0.3.9  2012-12-12
  - Fixed issues in mutually exclusive arguments that have default values (RT
    bug #81630 again)

0.3.8  2012-12-03
  - Messages respect order of user options (fixes RT bug #81630)
  - Show --man and --usage in help message
  - Prevent a trailing whitespace in --help usage string

0.3.7  2012-08-08
  - Fixed too enthusiastic variable interpolation in Euclid specs (RT bug #78854)
  - Fixed bug tracker URL (credits to Kent Fredric)

0.3.6  2012-07-31
  - Fixed occasional non-minimized entry when using :minimal_keys specifier

0.3.5  2012-02-20
  - Removed extraneous \E (patch by Todd Rinaldo)
  - Better handling of quoted arguments (RT bug #49525, reported by Ken Galinsky)

0.3.4  2012-02-12
  - New standard argument --podfile to write the manual in a .pod file
  - Fixed issue where the NAME and VERSION sections appeared as a verbatim
    section (which podchecker complains about)
  - Always convert POD to text when calling help() and man()
  - help() is now paged if IO::Pager::Page is installed
  - Dependency changes: