@@ -1,0 +1,13 @@
+name    = Getopt-Euclid
+author  = David Precious <davidp@preshweb.co.uk>
+license = Perl_5
+copyright_holder = David Precious
+copyright_year   = 2023
+
+version = 0.4.6
+
+[@Basic]
+[AutoPrereqs]
+[ReadmeFromPod]
+[NextRelease]
+format = %-6v %{yyyy-MM-dd}d%{ (TRIAL RELEASE)}T
